# excel-mcp-server-xlwings

./: .gitignore  GITHUB_上传指南.md  LICENSE  MCP_CONFIG.md  MCP_PROJECT_ARCHITECTURE.md  README.md  TOOLS.md  TROUBLESHOOTING.md  pyproject.toml  start_server_http.bat  start_server_stdio.bat  switch_to_haris_musa_config.ps1  verify_excelmcp_installation.ps1
.kiro/settings/: mcp.json
src/excel_mcp/: calculations.py  cell_utils.py  cell_validation.py  chart.py  data.py  exceptions.py  formatting.py  pivot.py  server.py  sheet.py  tables.py  validation.py  vba_executor.py  workbook.py  xw_helper.py
tests/: __init__.py  conftest.py  test_vba_exceptions.py  test_vba_executor.py  test_vba_integration.py  test_workbook.py
