[project]
name = "excel-mcp-server"
version = "0.2.0"
description = "Excel MCP Server with xlwings for real-time editing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "xlwings>=0.30.0",
    "typer>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0"
]

[[project.authors]]
name = "haris"
email = "haris.musa@outlook.com"

[project.scripts]
excel-mcp-server = "excel_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build]
packages = ["src/excel_mcp"]
